--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,31 @@ springdoc:
 
 inventory:
   url: http://localhost:8082
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      inventory:
+        register-health-indicator: true
+        event-consumer-buffer-size: 10
+        sliding-window-type: COUNT_BASED
+        sliding-window-size: 5
+        failure-rate-threshold: 50
+        wait-duration-in-open-state:
+          seconds: 5
+        permitted-number-of-calls-in-half-open-state: 3
+        automatic-transition-from-open-to-half-open-enabled: true
+        minimum-number-of-calls: 5
+
+  timelimiter:
+    instances:
+      inventory:
+        timeout-duration:
+          seconds: 3
+
+  retry:
+    instances:
+      inventory:
+        max-attempts: 3
+        wait-duration:
+          seconds: 5
